force-app/main/default/objects/Director__c/Director__c.object-meta.xml
<CustomObject>
    <label>Director</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Director Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Directors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>