force-app/main/default/objects/Director__c/fields/Beneficially_Held__c.field-meta.xml
<CustomField>
    <fullName>Beneficially_Held__c</fullName>
    <label>Beneficially Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>