force-app/main/default/objects/Director__c/fields/Class_of_shares__c.field-meta.xml
<CustomField>
    <fullName>Class_of_shares__c</fullName>
    <label>Class of shares</label>
    <type>TextArea</type>
</CustomField>