force-app/main/default/objects/Director__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>Collateral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>