force-app/main/default/objects/Director__c/fields/Found_in_Party__c.field-meta.xml
<CustomField>
    <fullName>Found_in_Party__c</fullName>
    <label>Found in Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>