force-app/main/default/objects/Director__c/fields/Jointly_Held__c.field-meta.xml
<CustomField>
    <fullName>Jointly_Held__c</fullName>
    <defaultValue>&quot;no&quot;</defaultValue>
    <label>Jointly Held?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>