force-app/main/default/objects/Director__c/fields/Migration__c.field-meta.xml
<CustomField>
    <fullName>Migration__c</fullName>
    <label>Migration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>