force-app/main/default/objects/Director__c/fields/Number_of_shares_issued__c.field-meta.xml
<CustomField>
    <fullName>Number_of_shares_issued__c</fullName>
    <label>Number of shares issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>