force-app/main/default/objects/Director__c/fields/Pmsi__c.field-meta.xml
<CustomField>
    <fullName>Pmsi__c</fullName>
    <label>Pmsi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>