force-app/main/default/objects/Director__c/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <type>TextArea</type>
</CustomField>