force-app/main/default/objects/Director__c/fields/Resident_Overseas__c.field-meta.xml
<CustomField>
    <fullName>Resident_Overseas__c</fullName>
    <label>Resident Overseas</label>
    <type>TextArea</type>
</CustomField>