force-app/main/default/objects/Director__c/fields/Secured_Parties__c.field-meta.xml
<CustomField>
    <fullName>Secured_Parties__c</fullName>
    <label>Secured Parties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>